Fix for "typing" background overlapping border of #messages.

--- a/Chat/Chat.css
+++ b/Chat/Chat.css
@@ -47,6 +47,7 @@
     left: 70%;
     width: 25%;
     bottom: 70px;
+    margin-left: 2px; /* for #messages border */
 }
 
 #users li {
